# telegram-download-daemon-ng

./: .dockerignore  .gitignore  CONTRIB.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  telegram-download-daemon.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  create-gh-release.yml  create-release-pr.yml  publish.yml  publish_docker.yml  publish_pypi.yml  publish_release.yml
.github/workflows/actions/build-package/: action.yml
.github/workflows/actions/set-environment/: action.yml
src/: download_media.py  sessionManager.py  telegram-download-daemon.py  telegram_download_daemon.py
src/telegram_download_daemon_ng/: __init__.py  __main__.py  cli.py  config.py  constants.py  download_media.py  session_manager.py  utils.py
test/manual/: upload.feature
