[project]
name = "telegram-download-daemon-ng"
version = "1.0.0b9"
description = "A daemon to automate telegram download of big files."
authors = [
    {name = "Luis Zurro", email = "luiszurrodecos@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<4.0"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = [
    "download",
    "downloads",
    "telegram",
]
dependencies = [
    "cffi==2.0.0",
    "cryptg==0.5.2",
    "pyaes==1.6.1",
    "pyasn1==0.6.2",
    "pycparser==2.23",
    "rsa==4.9.1",
    "telethon==1.42.0",
    "humanize==4.13.0",
]

[project.scripts]
telegram_download_daemon_ng = "telegram_download_daemon_ng.__main__:main"
telegram-download-daemon-ng = "telegram_download_daemon_ng.__main__:main"

[project.urls]
Homepage = "https://github.com/Nyaran/telegram-download-daemon-ng"
Sponsor = "https://github.com/sponsors/Nyaran"
Tracker = "https://github.com/Nyaran/telegram-download-daemon-ng/issues"

[build-system]
requires = ["uv_build>=0.8.17,<0.10.0"]
build-backend = "uv_build"
